[package]
name = "floyd-warshall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
ittapi = { version = "0.4.0" }
rand = "0.8.5"
ndarray = {version = "0.15.6", features = ["rayon"]}
clap = "4.5.2"
ndarray-rand = "0.14"
rand_distr = "0.4.3"
rayon = "1.9.0"
